# lib-zc

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  dev_zc.h  libzc.h  zc.h  zc_coroutine.h  zcc.h
cpp_sample/begin_end_text/: begin_end_text.cpp
cpp_sample/calendar/: ics_calendar_builder.cpp  ics_calendar_parser.cpp
cpp_sample/cdb/: builder.cpp  reader.cpp  walker.cpp
cpp_sample/charset/: CMakeLists.txt  Makefile  build_detect_data.cpp  detect.cpp  iconv.cpp  mail_text.cpp  utf8_simple_digest.cpp  utf8_tail_complete.cpp
cpp_sample/event/: CMakeLists.txt  aio.cpp  coroutine_connect.cpp  iopipe.cpp  pthread_aio.cpp  thread_aio.cpp  timer.cpp  trigger.cpp
cpp_sample/http/: cookie.cpp  coroutine_httpd.cpp  lib_httpd.h  simple_client.cpp  simple_httpd.cpp  url.cpp
cpp_sample/imap/: CMakeLists.txt  append.cpp  check_new.cpp  idle.cpp  imap_utf7.cpp  imap_utf7.php  list.cpp
cpp_sample/json/: array_test.cpp  create_test.cpp  object_test.cpp  serialize_pretty_test.cpp  unserialize_test.cpp  value_test.cpp  zcc_json.h
cpp_sample/master/: aio_server.cpp
cpp_sample/memcache/: client.cpp
cpp_sample/mime/: date.cpp  header_line_parse.cpp  mail_builder.cpp  mail_parser.cpp  mime_benchmark.cpp  tnef_parser.cpp
cpp_sample/pop/: CMakeLists.txt  pop_client.cpp
cpp_sample/redis/: client.cpp  create_redis_server.sh  lib.hpp  subscribe.cpp
cpp_sample/search/: msearch_builder.cpp  msearch_match.cpp  msearch_walker.cpp
cpp_sample/server/: aio_worker_server.cpp  coroutine_worker_server.cpp  general_master.sh  master.cpp  master.sh  simple_line_aio_worker_server.cpp
cpp_sample/smtp/: smtp_client.cpp
cpp_sample/stdlib/: buffer.cpp  generate_timezone_data.cpp  get_addr.cpp  iso8601_2004.cpp  license.cpp  lunar.cpp  mac.cpp  mkdir.cpp  osinfo.cpp  split.cpp  tcp_echo.cpp  time.cpp  unique_id.cpp
cpp_sample/stream/: CMakeLists.txt  Makefile  io.cpp  no_ssl_io.cpp
cpp_sample/thread/: pool.cpp  utils.cpp
cpp_src/: cpp_dev.h
cpp_src/begin_end_text/: begin_end_text.cpp  vcf.cpp
cpp_src/calendar/: event_matcher.cpp  ics_calendar.cpp
cpp_src/cdb/: builder.cpp  reader.cpp  walker.cpp
cpp_src/charset/: char_score.h  charset.cpp  detect.cpp  iconv.cpp  uconv.cpp  utf8.cpp
cpp_src/encode/: base64.cpp  encode.cpp  hex.cpp  ncr.cpp  quoted_printable.cpp  uu.cpp  xml.cpp
cpp_src/event/: aio.cpp  iopipe.cpp  ssl.cpp
cpp_src/hash/: crc16.cpp  crc32.cpp  crc64.cpp  openssl.cpp
cpp_src/http/: cookie.cpp  http_simple_client.cpp  httpd.cpp  httpd_file.cpp  httpd_log.cpp  httpd_quick_response.cpp  httpd_uploaded_file.cpp  httpd_websocketd.cpp  token.cpp  url.cpp
cpp_src/imap/: auth.cpp  capability.cpp  check_new.cpp  client.cpp  folder_action.cpp  folder_list.cpp  folder_select.cpp  id.cpp  imap.h  imap_utils.cpp  mail_fetch.cpp  mail_list.cpp  mail_operate.cpp  open.cpp  quick_cmd.cpp  response_tokens.cpp
cpp_src/json/: zcc_json.cpp  zcc_json.h
cpp_src/mail/: mail_account_checker.cpp
cpp_src/master/: aio_server.cpp  simple_line_request_aio_server.cpp
cpp_src/memcache/: client.cpp
cpp_src/mime/: 2231.cpp  address.cpp  charset.cpp  classify.cpp  date.cpp  debug_show.cpp  header_line.cpp  imap_section.cpp  mail_builder.cpp  mail_parser.cpp  mime.h  mime_node.cpp  mime_parse.cpp  param.cpp  tnef.cpp
cpp_src/pop/: pop.cpp  pop.h
cpp_src/redis/: basic_engine.cpp  client.cpp  cluster_engine.cpp  redis.h  standalone_engine.cpp
cpp_src/search/: msearch.cpp
cpp_src/server/: aio_worker_server.cpp  coroutine_worker_server.cpp  master_server.cpp  simple_line_aio_worker_server.cpp
cpp_src/smtp/: quick_send.cpp  smtp.cpp  smtp.h
cpp_src/sqlite3/: sqlite3_mini_client.cpp  sqlite3_mini_client.h  sqlite3_mini_stmt.cpp
cpp_src/stdlib/: buffer.cpp  chroot_user.cpp  cint_and_data.cpp  config.cpp  csv.cpp  date.cpp  dict.cpp  dlopen.cpp  dns.cpp  errno.cpp  file_category.cpp  flock.cpp  fs.cpp  greedy_mpool.cpp  io.cpp  license.cpp  log.cpp  lunar.cpp  mac_address.cpp  main_argument.cpp  malloc.cpp  mime_type.cpp  mmap.cpp  msgbox.cpp  openssl.cpp  os.cpp  rbtree.cpp  send_fd.cpp  signal.cpp  std.cpp  string.cpp  tcp_socket.cpp  thread.cpp  time.cpp  time.timezone  time_iso8601_2004.cpp  timezone.cpp  timezone_data.hpp  unique_id.cpp  win32.cpp  (+2 more)
cpp_src/stream/: basic_stream.cpp  fd.cpp  fstream.cpp  iostream.cpp  ssl.cpp  stream.cpp
cpp_src/thread/: pool.cpp  utils.cpp
dev/: cmake_general_utils.cmake  extra.cmake.sample  platform.cmake.sample  sample.cmake
dev/deleted_code/: master-multi_listen.c  master-single_listen.c
doc/: README.md  aio.md  aio_cpp.md  argv.md  buf.md  cdb.md  cdb_cpp.md  charset.md  charset_cpp.md  chroot_user.md  cint_and_data.md  config.md  config_cpp.md  coroutine.md  crc.md  dict.md  dns.md  dns_cpp.md  encode.md  encode_cpp.md  file.md  file_cpp.md  http.md  httpd.md  httpd_cpp.md  io.md  io_cpp.md  iopipe.md  iopipe_cpp.md  json.md  json_cpp.md  license.md  link.md  list.md  log.md  log_cpp.md  macro_link.md  macro_rbtree.md  main_argument.md  main_argument_cpp.md  (+30 more)
include/zcc/: zcc_aio.h  zcc_begin_end_text.h  zcc_buffer.h  zcc_calendar.h  zcc_cdb.h  zcc_charset.h  zcc_charset_uconv_engine.hpp  zcc_errno.h  zcc_http.h  zcc_ics.h  zcc_imap.h  zcc_intpack.h  zcc_json.h  zcc_link.h  zcc_mail.h  zcc_memcache.h  zcc_mime.h  zcc_openssl.h  zcc_pop.h  zcc_rbtree.h  zcc_redis.h  zcc_search.h  zcc_server.h  zcc_smtp.h  zcc_sqlite3.h  zcc_stdlib.h  zcc_stream.h  zcc_thread.h  zcc_vcf.h  zcc_win64.h
makefiles/: clean.makefile  defined.include.sample  depend.makefile  depend.static  lib.makefile  sample.makefile  sample_list.makefile
old/not_good_20170218-c/: libzc.h
old/not_good_20170704-c/: Makefile
old/very_very_old_2013-c/: Makefile
old/veryold/: Makefile  README.md  makefile.test  makefile.tlist  note.txt  zc.h
old/veryold-c/: makefile.inc  makefile.libzc  makefile.libzc.debug
sample/cdb/: Makefile  builder.c  reader.c  walker.c
sample/charset/: CMakeLists.txt  Makefile  all_utf8_23.c  charset.c  detact.c  extra.makefile.example  iconv.c  utf8_token_count.c
sample/config/: config.c  imapd.cf  smtpd_wall.cf
(+626 files in other folders)
